--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0px;
   font-family: Arial, Helvetica, sans-serif;
-  height: 2000px;
+  height: 600px;
 }
 
 h1,
@@ -22,6 +22,7 @@ a {
 img {
   max-width: 100%;
   display: block;
+  border-radius: 4px;
 }
 .header-bg {
   background-color: #000000;
@@ -97,6 +98,7 @@ img {
 .introducao-bg {
   background: #000000;
   color: #ffffff;
+  box-shadow: inset 0 -120px #fff;
 }
 
 .introducao {
@@ -113,7 +115,12 @@ img {
 
 .introducao-conteudo {
   align-self: end;
-  padding-bottom: 80px;
+  padding-bottom: 200px;
+}
+
+.introducao img {
+  height: 100%;
+  object-fit: cover;
 }
 
 .introducao h1 {
@@ -129,6 +136,7 @@ img {
   margin-bottom: 20px;
   font-size: 24px;
   line-height: 1.5;
+  color: #acacac;
 }
 
 .introducao a {
@@ -146,4 +154,46 @@ img {
 
 .introducao a:hover {
   background: linear-gradient(#ffb60d, #e59317);
+}
+
+@media (max-width: 600px) {
+  .introducao a {
+    padding: 12px 16px;
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 1200px) {
+  .introducao h1 {
+    font-size: 48px;
+  }
+  .introducao p {
+    font-size: 18px;
+  }
+}
+
+@media (max-width: 800px) {
+  .introducao-bg {
+    background: #111111;
+    padding-top: 40px;
+    box-shadow: inset 0 -60px #fff;
+  }
+  .introducao {
+    grid-template-columns: 1fr;
+    gap: 32px;
+  }
+  .introducao-conteudo {
+    padding-bottom: 0px;
+  }
+  .introducao h1 {
+    font-size: 32px;
+    margin-bottom: 16px;
+  }
+  .introducao p {
+    font-size: 14px;
+  }
+  .introducao img {
+    width: 100%;
+    height: 300px;
+  }
 }
