--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,8 @@ img {
   color: #ffffff;
   font-size: 18px;
   position: relative;
+  font-family: "Poppins";
+  font-weight: 400;
 }
 .header-menu a:after {
   content: "";
@@ -127,6 +129,8 @@ img {
   margin-bottom: 32px;
   font-size: 64px;
   line-height: 1.125;
+  font-family: "Poppins";
+  font-weight: 600;
 }
 .introducao h1 span {
   color: #ffbb00;
@@ -137,6 +141,8 @@ img {
   font-size: 24px;
   line-height: 1.5;
   color: #acacac;
+  font-family: "Roboto";
+  font-weight: 400;
 }
 
 .introducao a {
@@ -149,7 +155,8 @@ img {
   text-transform: uppercase;
   font-size: 18px;
   line-height: 1.33;
-  font-weight: bold;
+  font-family: "Poppins";
+  font-weight: 600;
 }
 
 .introducao a:hover {
