--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@
 
 /* Home */
 @import "./home/introducao.css";
+@import "./home/bikes.css";
 
 /*  Botão */
 @import "./utilidades/componentes.css";
