--- a/css/global/global.css
+++ b/css/global/global.css
@@ -2,10 +2,13 @@ body {
   margin: 0px;
   font-family: Arial, Helvetica, sans-serif;
   color: var(--cor-11);
-  height: 600px;
+  padding-bottom: 600px;
 }
 
 h1,
+h2,
+h3,
+h4,
 ul,
 p {
   margin: 0px;
@@ -23,5 +26,8 @@ a {
 img {
   max-width: 100%;
   display: block;
+}
+
+img[src$=".jpg"] {
   border-radius: 4px;
 }
