--- a/css/home/bikes.css
+++ b/css/home/bikes.css
@@ -1,33 +1,63 @@
-.bikes-grid {
-  display: grid;
-  background-color: var(--cor-2);
-  grid-template-columns: 1fr 1fr 1fr;
-  gap: 0px 40px;
-  box-sizing: border-box;
-  max-width: 1600px;
-  padding-left: 70px;
-  padding-right: 70px;
+.bicicleta-lista {
+  padding-top: 60px;
+  padding-bottom: 120px;
+}
+
+.bicicleta-lista h2 {
+  margin-bottom: 40px;
+}
+
+.bicicleta-lista ul {
+  display: flex;
+  gap: 0px 20px;
+  padding: 0 70px;
+  max-width: 1400;
   margin-left: auto;
   margin-right: auto;
+  overflow-x: auto;
 }
 
-.bike {
-  grid-template-columns: 1fr;
+.bicicleta-lista li {
+  min-width: 280px;
 }
 
-h2 {
-  max-width: 1200px;
-  padding-left: 20px;
-  padding-right: 20px;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.bike h3:after {
-  content: "";
+.bicicleta-lista a {
   display: block;
+}
+
+.bicicleta-lista img {
+  margin-bottom: 16px;
+}
+
+.bicicleta-lista h3 {
+  margin-bottom: 8px;
+  display: flex;
+  align-items: center;
+}
+
+.bicicleta-lista h3::before {
+  content: "";
+  display: inline-block;
   height: 8px;
   width: 12px;
-  background: var(--cor-p1);
-  margin-top: 4px;
+  margin-right: 8px;
+  background-color: var(--cor-p1);
+  transition: width 0.3;
+}
+
+.bicicleta-lista a:hover h3::before {
+  width: 24px;
+}
+
+.bicicleta-lista li span {
+  padding-left: 20px;
+}
+
+@media (max-width: 800px) {
+  .bicicleta-lista {
+    padding-bottom: 120px;
+  }
+  .bicicleta-lista ul {
+    gap: 20px;
+  }
 }
