--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@
 @import "./home/introducao.css";
 @import "./home/bikes.css";
 @import "./home/tecnologia.css";
+@import "./home/parceiros.css";
 
 /*  Botão */
 @import "./utilidades/componentes.css";
