--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,8 @@
 @import "./home/bikes.css";
 @import "./home/tecnologia.css";
 @import "./home/parceiros.css";
+@import "./home/depoimento.css";
+@import "./home/seguros.css";
 
 /*  Botão */
 @import "./utilidades/componentes.css";
