--- a/css/style.css
+++ b/css/style.css
@@ -16,6 +16,7 @@
 @import "./home/parceiros.css";
 @import "./home/depoimento.css";
 @import "./home/seguros.css";
+@import "./home/contato.css";
 
 /*  Botão */
 @import "./utilidades/componentes.css";
