--- a/css/style.css
+++ b/css/style.css
@@ -1,13 +1,14 @@
+/* Global */
 @import "./global/global.css";
-
-/* Cores */
-@import "./utilidades/cores.css";
-
-/* tipografia */
-@import "./utilidades/tipografia.css";
 
 /* header */
 @import "./global/header.css";
+
+/*  Utilidades */
+@import "./utilidades/componentes.css";
+@import "./utilidades/formulario.css";
+@import "./utilidades/tipografia.css";
+@import "./utilidades/cores.css";
 
 /* Home */
 @import "./home/introducao.css";
@@ -18,8 +19,9 @@
 @import "./home/seguros.css";
 @import "./home/contato.css";
 
-/*  Botão */
-@import "./utilidades/componentes.css";
-
 /*  termos */
 @import "./termos/termos.css";
+
+/*  contato */
+@import "./contato/contato.css";
+@import "./contato/lojas.css";
