--- a/css/style.css
+++ b/css/style.css
@@ -25,3 +25,6 @@
 /*  contato */
 @import "./contato/contato.css";
 @import "./contato/lojas.css";
+
+/*  bicicletas */
+@import "./bicicletas/bicicletas.css";
