--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@
 
 /*  bicicletas */
 @import "./bicicletas/bicicletas.css";
+@import "./bicicleta/bicicleta.css";
 
 /*  seguros */
 @import "./seguros/seguros.css";
