nebula e magic add

--- a/css/home/bikes.css
+++ b/css/home/bikes.css
@@ -10,11 +10,15 @@
 .bicicleta-lista ul {
   display: flex;
   gap: 0px 20px;
-  padding: 0 70px;
+  padding: 0px 20px 20px 20px;
   max-width: 1400;
   margin-left: auto;
   margin-right: auto;
   overflow-x: auto;
+}
+
+#bicicleta .bicicleta-lista ul {
+  padding: 0px 0px 20px 0px;
 }
 
 .bicicleta-lista li {
