links internos bikes add

--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,7 @@
 /*  bicicletas */
 @import "./bicicletas/bicicletas.css";
 @import "./bicicleta/bicicleta.css";
+@import "./bicicleta/seguro.css";
 
 /*  seguros */
 @import "./seguros/seguros.css";
